# cherenkov-radiation-ray-tracing

./: .cdtbuild  .cdtproject  .cproject  .gitignore  .gitmodules  .project  .project_initial  CMakeLists.txt  CMakeSettings.json  README.md
assets/: CMakeLists.txt  settings.json
assets/ply/: Augustus.ply  Venus-Low.ply  Venus.ply  box.ply  chamber.ply  chamber2.ply  reactor-boi.ply  reactor-box.ply  reactor-chamber.ply  reactor-pit.ply  reactor-rods.ply  reactor.ply  reactor2.ply  reactor_hifi.ply  venus_box.ply
assets/ppm/: fig-10b.ppm  fig-10c.ppm  fig-10d.ppm  fig-11b.ppm  fig-11c.ppm  fig-11d.ppm  fig-7b.ppm  fig-7c.ppm  fig-7d.ppm  fig-9b.ppm  fig-9f.ppm
docs/: index.md
raytracer/: CMakeLists.txt
raytracer/BRDFs/: Attribute.cpp  Attribute.hpp  AttributeBasedBrdf.cpp  AttributeBasedBrdf.hpp  GlossySpecularMicrofacet.cpp  GlossySpecularMicrofacet.h  Lambertian.h  Microfacet.cpp  Microfacet.h  attribute.cpp  attribute.hpp
raytracer/Cameras/: Camera.cpp  Camera.h  Pinhole.cpp
raytracer/GeometricObjects/: Compound.cpp  Compound.h  GeometricObject.cpp  GeometricObject.h  Grid.cpp  Grid.h  Instance.cpp  Instance.h
raytracer/GeometricObjects/Triangles/: FlatMeshTriangle.cpp  MeshTriangle.cpp  MeshTriangle.h  SmoothMeshTriangle.cpp  SmoothTriangle.cpp  Triangle.cpp
raytracer/Lights/: Light.h  PointLight.h
raytracer/Materials/: Emissive.cpp  Emissive.h  GlossySpecular.cpp  GlossySpecular.h  Material.h  Matte.cpp  SVAttributeBasedMapping.cpp  SVAttributeBasedMapping.hpp  microfacet.cpp  microfacet.h  svattributebasedmapping.cpp  svattributebasedmapping.hpp
raytracer/Tracers/: MarchingRayTracer.cpp  MarchingRayTracer.hpp  RayCast.cpp  Tracer.h
raytracer/UserInterface/: glsl.cpp  glsl.hpp  main.cpp  program.cpp  program.hpp  renderThread.cpp  renderThread.h  ui.cpp  ui.h  wxraytracer.cpp
raytracer/Utilities/: Constants.h  Image.cpp  Image.h  ImageTexture.hpp  Mesh.h  Normal.h  Point3D.cpp  Point3D.h  RGBColor.cpp  RGBColor.h  ShadeRec.cpp  ShadeRec.h  Vector3D.h  ply.c  ply.cpp  ply.h
raytracer/World/: ViewPlane.h  World.cpp  World.h
runs/: demo1.sh  demo2.sh  demo3.sh  demo4.sh  denoise.bat  denoise.sh
